--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="">
     <head>
         <title>About Us</title>
-        <!--Add something here to fix trademark-->
+        <meta charset="utf-8">
     </head>
     <body>
         <h1>About Us</h1>
